--- a/k-cv.tex
+++ b/k-cv.tex
@@ -23,9 +23,9 @@
                        % bracket to remove colors from this template
                        % for printing
 
-
+\usepackage{marginnote}
 \begin{document}
-\header{john}{smith}{junior business analyst} % Your name and current job
+\header{Ekaterina}{ILIN}{PhD student in astrophysics} % Your name and current job
 
 %-------------------------------------------------------------------------------
 %	SIDEBAR SECTION
@@ -33,25 +33,24 @@
 
 \begin{aside} % In the aside, each new line forces a line break
 \section{date of birth}
-\color{gray}1970-01-01
+\color{gray}1992-09-11
 \section{contact}
-123 Broadway
-City, State 12345
-Country
+Carl-D\"ahne-Str. 10
+14469 Potsdam
+Germany
 ~
-+0 (000) 111 1111
-+0 (000) 111 1112
++49 (176) 531 351 97
++49 (331) 749 928 0
 ~
-\href{mailto:john@smith.com}{john@smith.com}
-\href{http://www.smith.com}{http://www.smith.com}
-\href{http://facebook.com/johnsmith}{fb://jsmith}
+\href{mailto:eilin@aip.de}{eilin@aip.de}
+\href{https://github.com/ekaterinailin}{github/ekaterinailin}
+%\href{http://facebook.com/johnsmith}{fb://jsmith}
 \section{languages}
-english mother tongue
-spanish \& italian fluency
-\section{programming}
-JavaScript
-Python, C++, PHP
-CSS3 \& HTML5
+russian, german (bilingual)
+english C1
+french B2
+\section{skills}
+Python, Unix, LaTeX, Git(Hub)
 \end{aside}
 
 %-------------------------------------------------------------------------------
@@ -61,109 +60,116 @@ CSS3 \& HTML5
 \section{education}
 
 \begin{entrylist}
+\entry
+{2018 \to ongoing}
+{PhD {\normalfont in Astrophysics}}
+{Leibniz Institute for Astrophysics Potsdam (AIP), Germany}
+{Specialization in Star-Planet-Interactions\\
+\emph{Stellar Flares in Star-Exoplanet Systems and Young Stars} \\ I am interested in magnetic star-planet interactions, and their long-term effects on exoplanet habitability and stellar evolution.}
+%------------------------------------------------
 %------------------------------------------------
 \entry
-{2011 \to 2012}
-{Master {\normalfont of Commerce}}
-{The University of California, Berkeley}
-{\emph{Money Is The Root Of All Evil -- Or Is It?} \\ This thesis explored the 
-idea that money has been the cause of untold anguish and suffering in the world. 
-I found that it has, in fact, not.}
+{2016 \to 2018}
+{Master {\normalfont of Science in Astrophysics}}
+{University of Potsdam, Germany}
+{Specialization in Stellar Activity\\
+\emph{Flares in Clusters using K2 Data} \\ 
+This thesis quantified the relation between flaring activity on cool stars and their masses and ages for ZAMS to 600 Myr and K to mid-M dwarfs.\\
+1,0 \emph{with distinction}}
+%------------------------------------------------
+
+
 %------------------------------------------------
 \entry
-{2007 \to 2008}
-{Bachelor {\normalfont of Business Studies}}
-{The University of California, Berkeley}
-{Specialization in Commerce}
+{2012 \to 2016}
+{Bachelor {\normalfont of Science in Physics}}
+{Karlsruhe Institute for Technology, Germany}
+{Specialization in Biophysics\\
+\emph{Uptake of TAT-coated Gold Nanoclusters in Live HeLa-Cells}\\
+1,4 \emph{very good}}
 %------------------------------------------------
 \end{entrylist}
 
-\section{experience}
+\section{work and teaching}
 
 \begin{entrylist}
 %------------------------------------------------
 \entry
-{2012 \to now}
-{LEHMAN BROTHERS}
-{Los Angeles, California}
-{\emph{1\textsuperscript{st} Year Analyst} \\
-Developed spreadsheets for risk analysis on exotic derivatives on a wide array 
-of commodities (ags, oils, precious and base metals), managed blotter and 
-secondary trades on structured notes, liaised with Middle Office, Sales and 
-Structuring for bookkeeping. \\
-Detailed achievements:
-\begin{itemize}
-\item Learned how to make amazing coffee
-\item Finally determined the reason for \textsc{PC LOAD LETTER}:
-\begin{itemize}
-\item Paper jam
-\item Software issues:
-\begin{itemize}
-\item Word not sending the correct data to printer
-\item Windows trying to print in letter format
-\end{itemize}
-\item Coffee spilled inside printer
-\end{itemize}
-\item Broke the office record for number of kitten pictures in cubicle
-\end{itemize}}
+{2016 \to 2018}
+{University of Potsdam}
+{Potsdam, Germany}
+{\emph{Tutor} for undergraduates.}
 %------------------------------------------------
 \entry
-{2010 \to 2011}
-{LEHMAN BROTHERS}
-{London, United Kingdom}
-{\emph{Summer Intern} \\
-Rated "truly distinctive" for Analytical Skills and Teamwork.}
+{2018}
+{Leibniz Institute for Astrophysics (AIP)}
+{Potsdam, Germany}
+{\emph{Research Assistant}}
 %------------------------------------------------
 \entry
-{2008 \to 2009}
-{Buy More}
-{Burbank, California}
-{\emph{Computer Repair Specialist} \\
-Worked in the Nerd Herd and helped to solve computer problems by asking 
-customers to turn their computers off and on again.}
+{2011 \to 2012}
+{SchulLV GmbH}
+{Karlsruhe, Germany}
+{\emph{Author} of teaching aid in mathematics.}
 %------------------------------------------------
 \end{entrylist}
-
-\clearpage
-
-\smallheader{john}{smith}
 
 %-------------------------------------------------------------------------------
 %	AWARDS SECTION
 %-------------------------------------------------------------------------------
 
-\section{awards}
+\section{awards and scholarships}
 
 \begin{entrylist}
 %------------------------------------------------
 \entry
-{2011}
-{Postgraduate Scholarship}
-{School of Business, The University of California}
-{Awarded to the top student in their final year of a Bachelors degree.}
+{2018}
+{Visiting Scientist}
+{NASA Ames Research Center, Mountain View, CA, USA}
+{Awarded funding for a research visit at the Kepler mission headquarters.}
+
+\entry
+{2018}
+{Challenge Winner}
+{HackHPI 2018 hackathon.}
+{Data science challenge by \emph{Tableau}.}
+
+\entry
+{2014}
+{Erasmus+ Scholarship}
+{Universitet i Oslo, Norway}
+{Awarded funding for six month of undergraduate studies.\\
+Focus: Space Physics, Computational Physics}
+
+\entry
+{2012 \to 2018}
+{Full Scholarship}
+{German Academic Scholarship Foundation}
+
+
 %------------------------------------------------
 \end{entrylist}
 
-%-------------------------------------------------------------------------------
-%	COMMUNICATION SKILLS SECTION
-%-------------------------------------------------------------------------------
+\clearpage
 
-\section{communication skills}
+\smallheader{Ekaterina}{Ilin}
+
+
+\section{presentations}
 
 \begin{entrylist}
 %------------------------------------------------
 \entry
-{2011}
-{Oral Presentation}
-{California Business Conference}
-{Presented the research I conducted for my Masters of Commerce degree.}
+{2018}
+{Poster}
+{CoolStars20, Boston, MA, USA}
+{Exploring flaring activity as an age indicator using open cluster data}
 %------------------------------------------------
 \entry
-{2010}
-{Poster}
-{Annual Business Conference, Oregon}
-{As part of the course work for BUS320, I created a poster analyzing several 
-local businesses and presented this at a conference.}
+{2018}
+{Talk}
+{Dwarf Stars and Clusters with K2, Boston, MA, USA}
+{In Search of the Flaring-Age Relation.}
 %------------------------------------------------
 \end{entrylist}
 
@@ -172,7 +178,9 @@ local businesses and presented this at a conference.}
 %-------------------------------------------------------------------------------
 
 \section{publications}
-\bibentry{Near a Raven -- A Critical Review of Poe's Works}{John 
-Smith}{Sprinkler Publishing, New York, 2010}
+%\reversemarginpar
+%\marginnote{\color{gray}{refereed}}
+\bibentry{Flares in Open Clusters with K2. I. M45 (Pleiades), M44 (Praesepe) and M67}{Ilin, Ekaterina; Schmidt, Sarah J.; Davenport, James R. A.; Strassmeier, Klaus G.}{Accepted to Astronomy\& Astrophysics, 2019}
+
 
 \end{document}
