--- a/CV_Ekaterina_Ilin.tex
+++ b/CV_Ekaterina_Ilin.tex
@@ -24,6 +24,7 @@
                        % for printing
 
 \usepackage{marginnote}
+\usepackage{hyperref}
 \begin{document}
 \header{Ekaterina}{ILIN}{PhD student in astrophysics} % Your name and current job
 
@@ -65,7 +66,7 @@ Python, Unix, LaTeX, Git(Hub)
 {PhD {\normalfont in Astrophysics}}
 {Leibniz Institute for Astrophysics Potsdam (AIP), Germany}
 {Specialization in Star-Planet-Interactions\\
-\emph{Stellar Flares in Star-Exoplanet Systems and Young Stars} \\ I am interested in magnetic star-planet interactions, and their long-term effects on exoplanet habitability and stellar evolution.}
+\emph{Stellar Flares in Star-Exoplanet Systems and Young Stars} \vspace{0.2cm}\\ I am interested in magnetic star-planet interactions, and their long-term effects on exoplanet habitability and stellar evolution.}
 %------------------------------------------------
 %------------------------------------------------
 \entry
@@ -74,8 +75,8 @@ Python, Unix, LaTeX, Git(Hub)
 {University of Potsdam, Germany}
 {Specialization in Stellar Activity\\
 \emph{Flares in Clusters using K2 Data} \\ 
-This thesis quantified the relation between flaring activity on cool stars and their masses and ages for ZAMS to 600 Myr and K to mid-M dwarfs.\\
-1,0 \emph{with distinction}}
+\emph{1,0 "with distinction"}\vspace{0.2cm}\\
+This thesis quantified the relation between flaring activity on cool stars and their masses and ages for ZAMS to 600 Myr and K to mid-M dwarfs.}
 %------------------------------------------------
 
 
@@ -86,7 +87,7 @@ This thesis quantified the relation between flaring activity on cool stars and t
 {Karlsruhe Institute for Technology, Germany}
 {Specialization in Biophysics\\
 \emph{Uptake of TAT-coated Gold Nanoclusters in Live HeLa-Cells}\\
-1,4 \emph{very good}}
+\emph{1,4 "very good"}}
 %------------------------------------------------
 \end{entrylist}
 
@@ -130,8 +131,8 @@ This thesis quantified the relation between flaring activity on cool stars and t
 
 \entry
 {2018}
-{Challenge Winner}
-{HackHPI 2018 hackathon.}
+{Hackathon Challenge Winner}
+{HackHPI, Hasso Plattner Institute, Potsdam, Germany}
 {Data science challenge by \emph{Tableau}.}
 
 \entry
@@ -180,7 +181,7 @@ Focus: Space Physics, Computational Physics}
 \section{publications}
 %\reversemarginpar
 %\marginnote{\color{gray}{refereed}}
-\bibentry{Flares in Open Clusters with K2. I. M45 (Pleiades), M44 (Praesepe) and M67}{Ilin, Ekaterina; Schmidt, Sarah J.; Davenport, James R. A.; Strassmeier, Klaus G.}{Accepted to Astronomy\& Astrophysics, 2019}
+\bibentry{Flares in open clusters with K2. I. M45 (Pleiades), M44 (Praesepe) and M67}{Ilin, Ekaterina; Schmidt, Sarah J.; Davenport, James R. A.; Strassmeier, Klaus G.}{Accepted to Astronomy\& Astrophysics, 2019. \href{https://arxiv.org/abs/1812.06725}{\texttt{ArXiv 2018}}}
 
 
 \end{document}
