Updated paper and supervisors.

--- a/CV_Ekaterina_Ilin.tex
+++ b/CV_Ekaterina_Ilin.tex
@@ -65,7 +65,7 @@ Python, Unix, LaTeX, Git(Hub)
 {2018 \to ongoing}
 {PhD {\normalfont in Astrophysics}}
 {Leibniz Institute for Astrophysics Potsdam (AIP), Germany}
-{Specialization in Star-Planet-Interactions\\
+{Supervisor: Prof. Dr. Katja Poppenh\"ager\\
 \emph{Stellar Flares in Star-Exoplanet Systems and Young Stars} \vspace{0.2cm}\\ I am interested in magnetic star-planet interactions, and their long-term effects on exoplanet habitability and stellar evolution.}
 %------------------------------------------------
 %------------------------------------------------
@@ -73,7 +73,7 @@ Python, Unix, LaTeX, Git(Hub)
 {2016 \to 2018}
 {Master {\normalfont of Science in Astrophysics}}
 {University of Potsdam, Germany}
-{Specialization in Stellar Activity\\
+{Suervisor: Prof. Dr. Klaus Strassmeier\\
 \emph{Flares in Clusters using K2 Data} \\ 
 \emph{1,0 "with distinction"}\vspace{0.2cm}\\
 This thesis quantified the relation between flaring activity on cool stars and their masses and ages for ZAMS to 600 Myr and K to mid-M dwarfs.}
@@ -181,7 +181,7 @@ Focus: Space Physics, Computational Physics}
 \section{publications}
 %\reversemarginpar
 %\marginnote{\color{gray}{refereed}}
-\bibentry{Flares in open clusters with K2. I. M45 (Pleiades), M44 (Praesepe) and M67}{Ilin, Ekaterina; Schmidt, Sarah J.; Davenport, James R. A.; Strassmeier, Klaus G.}{Accepted to Astronomy\& Astrophysics, 2019. \href{https://arxiv.org/abs/1812.06725}{\texttt{ArXiv 2018}}}
+\bibentry{Flares in open clusters with K2. I. M45 (Pleiades), M44 (Praesepe) and M67}{Ilin, Ekaterina; Schmidt, Sarah J.; Davenport, James R. A.; Strassmeier, Klaus G.}{2019, Astronomy \& Astrophysics, 622, A133/16.\\ \texttt{\href{https://doi.org/10.1051/0004-6361/201834400}{doi:10.1051/0004-6361/201834400}, \href{https://arxiv.org/abs/1812.06725}{ArXiv:1812.06725}}}
 
 
 \end{document}
