Add seminar talk in CPH

--- a/CV_Ekaterina_Ilin.tex
+++ b/CV_Ekaterina_Ilin.tex
@@ -161,6 +161,12 @@ Focus: Space Physics, Computational Physics}
 \begin{entrylist}
 %------------------------------------------------
 \entry
+{2019}
+{Seminar talk}
+{Centre for Star and Planet Formation (STARPLAN), Copenhagen, Denmark}
+{Stellar magnetic evolution: superflares}
+%------------------------------------------------
+\entry
 {2018}
 {Poster}
 {CoolStars20, Boston, MA, USA}
@@ -170,7 +176,7 @@ Focus: Space Physics, Computational Physics}
 {2018}
 {Talk}
 {Dwarf Stars and Clusters with K2, Boston, MA, USA}
-{In Search of the Flaring-Age Relation.}
+{In search of the flaring-age relation.}
 %------------------------------------------------
 \end{entrylist}
 
