added BSC supervisor

--- a/CV_Ekaterina_Ilin.tex
+++ b/CV_Ekaterina_Ilin.tex
@@ -73,7 +73,7 @@ Python, Unix, LaTeX, Git(Hub)
 {2016 \to 2018}
 {Master {\normalfont of Science in Astrophysics}}
 {University of Potsdam, Germany}
-{Suervisor: Prof. Dr. Klaus Strassmeier\\
+{Supervisor: Prof. Dr. Klaus Strassmeier\\
 \emph{Flares in Clusters using K2 Data} \\ 
 \emph{1,0 "with distinction"}\vspace{0.2cm}\\
 This thesis quantified the relation between flaring activity on cool stars and their masses and ages for ZAMS to 600 Myr and K to mid-M dwarfs.}
@@ -86,6 +86,7 @@ This thesis quantified the relation between flaring activity on cool stars and t
 {Bachelor {\normalfont of Science in Physics}}
 {Karlsruhe Institute for Technology, Germany}
 {Specialization in Biophysics\\
+Supervisor: Prof. Dr. Ulrich Nienhaus\\
 \emph{Uptake of TAT-coated Gold Nanoclusters in Live HeLa-Cells}\\
 \emph{1,4 "very good"}}
 %------------------------------------------------
