--- a/CV_Ekaterina_Ilin.tex
+++ b/CV_Ekaterina_Ilin.tex
@@ -94,18 +94,19 @@ This thesis quantified the relation between flaring activity on cool stars and t
 \section{work and teaching}
 
 \begin{entrylist}
-%------------------------------------------------
-\entry
-{2016 \to 2018}
-{University of Potsdam}
-{Potsdam, Germany}
-{\emph{Tutor} for undergraduates.}
+
 %------------------------------------------------
 \entry
 {2018}
 {Leibniz Institute for Astrophysics (AIP)}
 {Potsdam, Germany}
 {\emph{Research Assistant}}
+%------------------------------------------------
+\entry
+{2016 \to 2018}
+{University of Potsdam}
+{Potsdam, Germany}
+{\emph{Tutor} for undergraduates.}
 %------------------------------------------------
 \entry
 {2011 \to 2012}
@@ -161,14 +162,20 @@ Focus: Space Physics, Computational Physics}
 \begin{entrylist}
 %------------------------------------------------
 \entry
+{2019}
+{Seminar Talk}
+{StarPlan, University of Copenhagen, Denmark}
+{Stellar magnetic evolution: superflares}
+%------------------------------------------------
+\entry
 {2018}
-{Poster}
+{Conference Poster}
 {CoolStars20, Boston, MA, USA}
 {Exploring flaring activity as an age indicator using open cluster data}
 %------------------------------------------------
 \entry
 {2018}
-{Talk}
+{Workshop Talk}
 {Dwarf Stars and Clusters with K2, Boston, MA, USA}
 {In Search of the Flaring-Age Relation.}
 %------------------------------------------------
@@ -183,5 +190,25 @@ Focus: Space Physics, Computational Physics}
 %\marginnote{\color{gray}{refereed}}
 \bibentry{Flares in open clusters with K2. I. M45 (Pleiades), M44 (Praesepe) and M67}{Ilin, Ekaterina; Schmidt, Sarah J.; Davenport, James R. A.; Strassmeier, Klaus G.}{2019, Astronomy \& Astrophysics, 622, A133/16.\\ \texttt{\href{https://doi.org/10.1051/0004-6361/201834400}{doi:10.1051/0004-6361/201834400}, \href{https://arxiv.org/abs/1812.06725}{ArXiv:1812.06725}}}
 
-
+\section{volunteering}
+\begin{entrylist}
+\entry
+{2017 \to 2018}
+{Python in astronomy}
+{University of Potsdam}
+{Running a Python code review group with the master students in astrophysics on a biweekly basis.}
+%------------------------------------------------
+\entry
+{2016 \to ongoing}
+{Effective Altruism}
+{Effectivie Altruism Berlin, Potsdam; Studienstiftung d. dt. Volkes}
+{Organising interdisciplinary workshops for 20-120 participants, reading groups, and recreational activities; local group head in Potsdam.}
+%------------------------------------------------
+\entry
+{2013 \to ongoing}
+{Scientific youth}
+{Deutsches Jungforschernetzwerk - juFORUM e.V.}
+{Organising interdisciplinary workshops and symposia for youth in STEM, presenting at science fairs, publishing articles in the club magazine; member of the executive board.}
+%------------------------------------------------
+\end{entrylist}
 \end{document}
