Added santa barbara and ases3

--- a/CV_Ekaterina_Ilin.tex
+++ b/CV_Ekaterina_Ilin.tex
@@ -126,6 +126,13 @@ Supervisor: Prof. Dr. Ulrich Nienhaus\\
 \begin{entrylist}
 %------------------------------------------------
 \entry
+{2019}
+{Graduation Award}
+{Physikalische Gesellschaft zu Berlin, Berlin, Germany}
+{Award tendered to excellent master theses earned at universities in Berlin and Potsdam.}
+
+
+\entry
 {2018}
 {Visiting Scientist}
 {NASA Ames Research Center, Mountain View, CA, USA}
@@ -161,6 +168,18 @@ Focus: Space Physics, Computational Physics}
 \section{presentations}
 
 \begin{entrylist}
+%------------------------------------------------
+\entry
+{2019}
+{Poster}
+{3rd Advanced School on Exoplanetary Demographics, Vietri sul Mare, Italy}
+{The frequency of super-Carrington flares in the solar-age cluster M67}
+%------------------------------------------------
+\entry
+{2019}
+{Conference talk}
+{Planet-Star Connections in the Era of TESS and Gaia, Santa Barbara, CA, USA}
+{Stellar magnetic evolution: flaring activity in K2 open clusters}
 %------------------------------------------------
 \entry
 {2019}
