Added thinkshop talk, StuSti scholarship, NEAD board membership

--- a/CV_Ekaterina_Ilin.tex
+++ b/CV_Ekaterina_Ilin.tex
@@ -107,7 +107,7 @@ Supervisor: Prof. Dr. Ulrich Nienhaus\\
 {2016 \to 2018}
 {University of Potsdam}
 {Potsdam, Germany}
-{\emph{Tutor} for undergraduates.}
+{\emph{Teaching assistant} for undergraduates.}
 %------------------------------------------------
 \entry
 {2011 \to 2012}
@@ -121,10 +121,19 @@ Supervisor: Prof. Dr. Ulrich Nienhaus\\
 %	AWARDS SECTION
 %-------------------------------------------------------------------------------
 
+\clearpage
+\smallheader{Ekaterina}{Ilin}
+
 \section{awards and scholarships}
 
 \begin{entrylist}
 %------------------------------------------------
+\entry
+{2020 \to ongoing}
+{Doctoral Scholarship}
+{German Academic Scholaship Foundation}
+{Includes a stipend, and additional academic and financial support throughout the doctoral studies.}
+
 \entry
 {2019}
 {Graduation Award}
@@ -160,9 +169,9 @@ Focus: Space Physics, Computational Physics}
 %------------------------------------------------
 \end{entrylist}
 
-\clearpage
 
-\smallheader{Ekaterina}{Ilin}
+
+
 
 
 \section{presentations}
@@ -171,32 +180,40 @@ Focus: Space Physics, Computational Physics}
 %------------------------------------------------
 \entry
 {2019}
+{Conference talk}
+{16th Potsdam Thinkshop: \vspace{-.1cm}\\\null\hfill
+The rotation periods of cool stars:\vspace{-.1cm}\\\null\hfill Measurements, uses, connections and prospects \vspace{-.1cm}\\\null\hfill
+Potsdam, Germany}
+{At a gallop: stellar flares from Kepler/K2 and TESS}
+%------------------------------------------------
+\entry
+{2019}
 {Poster}
-{3rd Advanced School on Exoplanetary Demographics, Vietri sul Mare, Italy}
+{3rd Advanced School on Exoplanetary Demographics\vspace{-.1cm}\\\null\hfill Vietri sul Mare, Italy}
 {The frequency of super-Carrington flares in the solar-age cluster M67}
 %------------------------------------------------
 \entry
 {2019}
 {Conference talk}
-{Planet-Star Connections in the Era of TESS and Gaia, Santa Barbara, CA, USA}
+{Planet-Star Connections in the Era of TESS and Gaia\vspace{-.1cm}\\\null\hfill Santa Barbara, CA, USA}
 {Stellar magnetic evolution: flaring activity in K2 open clusters}
 %------------------------------------------------
 \entry
 {2019}
 {Seminar talk}
-{Centre for Star and Planet Formation (STARPLAN), Copenhagen, Denmark}
+{Centre for Star and Planet Formation (STARPLAN)\vspace{-.1cm}\\\null\hfill Copenhagen, Denmark}
 {Stellar magnetic evolution: superflares}
 %------------------------------------------------
 \entry
 {2018}
-{Conference Poster}
-{CoolStars20, Boston, MA, USA}
+{Conference poster}
+{CoolStars20\vspace{-.1cm}\\\null\hfill Boston, MA, USA}
 {Exploring flaring activity as an age indicator using open cluster data}
 %------------------------------------------------
 \entry
 {2018}
-{Workshop Talk}
-{Dwarf Stars and Clusters with K2, Boston, MA, USA}
+{Workshop talk}
+{Dwarf Stars and Clusters with K2\vspace{-.1cm}\\\null\hfill Boston, MA, USA}
 {In search of the flaring-age relation.}
 %------------------------------------------------
 \end{entrylist}
@@ -210,19 +227,24 @@ Focus: Space Physics, Computational Physics}
 %\marginnote{\color{gray}{refereed}}
 \bibentry{Flares in open clusters with K2. I. M45 (Pleiades), M44 (Praesepe) and M67}{Ilin, Ekaterina; Schmidt, Sarah J.; Davenport, James R. A.; Strassmeier, Klaus G.}{2019, Astronomy \& Astrophysics, 622, A133/16.\\ \texttt{\href{https://doi.org/10.1051/0004-6361/201834400}{doi:10.1051/0004-6361/201834400}, \href{https://arxiv.org/abs/1812.06725}{ArXiv:1812.06725}}}
 
+\clearpage
+\smallheader{Ekaterina}{Ilin}
+
 \section{volunteering}
 \begin{entrylist}
 \entry
-{2017 \to 2018}
+{2017 \to ongoing}
 {Python in astronomy}
-{University of Potsdam}
-{Running a Python code review group with the master students in astrophysics on a biweekly basis.}
+{University of Potsdam\vspace{-.1cm}\\\null\hfill Leibniz Institute for Astrophysics Potsdam - AIP}
+{Running a Python code review group with the master students in astrophysics on a biweekly basis in 2017/2018. Running the Python Club at AIP since 2019.\\}
 %------------------------------------------------
 \entry
 {2016 \to ongoing}
 {Effective Altruism}
-{Effectivie Altruism Berlin, Potsdam; Studienstiftung d. dt. Volkes}
-{Organising interdisciplinary workshops for 20-120 participants, reading groups, and recreational activities; local group head in Potsdam.}
+{Effective Altruism Berlin, Potsdam\vspace{-.1cm}
+\\\null\hfill Studienstiftung d. dt. Volkes
+\vspace{-.1cm}\\\null\hfill Netzwerk f\"ur Effektiven Altruismus Deutschland e.V.}
+{Organising interdisciplinary workshops for 20-120 participants, reading groups, and recreational activities; local group head in Potsdam. Currently member of the excutive board of the German Network for Effective Altruism (NEAD e.V.).\\}
 %------------------------------------------------
 \entry
 {2013 \to ongoing}
