Shortened and updated to comply with AAS standards more.

--- a/CV_Ekaterina_Ilin.tex
+++ b/CV_Ekaterina_Ilin.tex
@@ -26,7 +26,7 @@
 \usepackage{marginnote}
 \usepackage{hyperref}
 \begin{document}
-\header{Ekaterina}{ILIN}{PhD student in astrophysics} % Your name and current job
+\header{Ekaterina }{ILIN}{PhD student in astrophysics} % Your name and current job
 
 %-------------------------------------------------------------------------------
 %	SIDEBAR SECTION
@@ -47,9 +47,9 @@ Germany
 \href{https://github.com/ekaterinailin}{github/ekaterinailin}
 %\href{http://facebook.com/johnsmith}{fb://jsmith}
 \section{languages}
-russian, german (bilingual)
-english C1
-french B2
+Russian, German (bilingual)
+English C1
+French B2
 \section{skills}
 Python, Unix, LaTeX, Git(Hub)
 \end{aside}
@@ -62,7 +62,7 @@ Python, Unix, LaTeX, Git(Hub)
 
 \begin{entrylist}
 \entry
-{2018 \to ongoing}
+{2018 \to \textbf{2022}}
 {PhD {\normalfont in Astrophysics}}
 {Leibniz Institute for Astrophysics Potsdam (AIP), Germany}
 {Supervisor: Prof. Dr. Katja Poppenh\"ager\\
@@ -117,12 +117,61 @@ Supervisor: Prof. Dr. Ulrich Nienhaus\\
 %------------------------------------------------
 \end{entrylist}
 
+
+
+
+
+\section{presentations}
+
+\begin{entrylist}
+%------------------------------------------------
+\entry
+{2019}
+{Conference talk}
+{16th Potsdam Thinkshop: \vspace{-.1cm}\\\null\hfill
+The rotation periods of cool stars:\vspace{-.1cm}\\\null\hfill Measurements, uses, connections and prospects \vspace{-.1cm}\\\null\hfill
+Potsdam, Germany}
+{At a gallop: stellar flares from Kepler/K2 and TESS}
+%------------------------------------------------
+%\entry
+%{2019}
+%{Poster}
+%{3rd Advanced School on Exoplanetary Demographics\vspace{-.1cm}\\\null\hfill Vietri sul Mare, Italy}
+%{The frequency of super-Carrington flares in the solar-age cluster M67}
+%------------------------------------------------
+\entry
+{2019}
+{Conference talk}
+{Planet-Star Connections in the Era of TESS and Gaia\vspace{-.1cm}\\\null\hfill Santa Barbara, CA, USA}
+{Stellar magnetic evolution: flaring activity in K2 open clusters}
+%------------------------------------------------
+%\entry
+%{2019}
+%{Seminar talk}
+%{Centre for Star and Planet Formation (STARPLAN)\vspace{-.1cm}\\\null\hfill Copenhagen, Denmark}
+%{Stellar magnetic evolution: superflares}
+%%------------------------------------------------
+\entry
+{2018}
+{Conference poster}
+{CoolStars20\vspace{-.1cm}\\\null\hfill Boston, MA, USA}
+{Exploring flaring activity as an age indicator using open cluster data}
+%------------------------------------------------
+\entry
+{2018}
+{Workshop talk}
+{Dwarf Stars and Clusters with K2\vspace{-.1cm}\\\null\hfill Boston, MA, USA}
+{In search of the flaring-age relation.}
+%------------------------------------------------
+\end{entrylist}
+
+
 %-------------------------------------------------------------------------------
 %	AWARDS SECTION
 %-------------------------------------------------------------------------------
-
-\clearpage
-\smallheader{Ekaterina}{Ilin}
+%
+%\clearpage
+%\smallheader{Ekaterina}{Ilin}
 
 \section{awards and scholarships}
 
@@ -164,71 +213,26 @@ Focus: Space Physics, Computational Physics}
 {2012 \to 2018}
 {Full Scholarship}
 {German Academic Scholarship Foundation}
-
+{Includes a stipend, and additional academic and financial support throughout the undergraduate and graduate studies.}
 
 %------------------------------------------------
 \end{entrylist}
 
 
 
-
-
-
-\section{presentations}
-
-\begin{entrylist}
-%------------------------------------------------
-\entry
-{2019}
-{Conference talk}
-{16th Potsdam Thinkshop: \vspace{-.1cm}\\\null\hfill
-The rotation periods of cool stars:\vspace{-.1cm}\\\null\hfill Measurements, uses, connections and prospects \vspace{-.1cm}\\\null\hfill
-Potsdam, Germany}
-{At a gallop: stellar flares from Kepler/K2 and TESS}
-%------------------------------------------------
-\entry
-{2019}
-{Poster}
-{3rd Advanced School on Exoplanetary Demographics\vspace{-.1cm}\\\null\hfill Vietri sul Mare, Italy}
-{The frequency of super-Carrington flares in the solar-age cluster M67}
-%------------------------------------------------
-\entry
-{2019}
-{Conference talk}
-{Planet-Star Connections in the Era of TESS and Gaia\vspace{-.1cm}\\\null\hfill Santa Barbara, CA, USA}
-{Stellar magnetic evolution: flaring activity in K2 open clusters}
-%------------------------------------------------
-\entry
-{2019}
-{Seminar talk}
-{Centre for Star and Planet Formation (STARPLAN)\vspace{-.1cm}\\\null\hfill Copenhagen, Denmark}
-{Stellar magnetic evolution: superflares}
-%------------------------------------------------
-\entry
-{2018}
-{Conference poster}
-{CoolStars20\vspace{-.1cm}\\\null\hfill Boston, MA, USA}
-{Exploring flaring activity as an age indicator using open cluster data}
-%------------------------------------------------
-\entry
-{2018}
-{Workshop talk}
-{Dwarf Stars and Clusters with K2\vspace{-.1cm}\\\null\hfill Boston, MA, USA}
-{In search of the flaring-age relation.}
-%------------------------------------------------
-\end{entrylist}
 
 %-------------------------------------------------------------------------------
 %	PUBLICATIONS SECTION
 %-------------------------------------------------------------------------------
 
-\section{publications}
+\section{refereed publications}
 %\reversemarginpar
 %\marginnote{\color{gray}{refereed}}
-\bibentry{Flares in open clusters with K2. I. M45 (Pleiades), M44 (Praesepe) and M67}{Ilin, Ekaterina; Schmidt, Sarah J.; Davenport, James R. A.; Strassmeier, Klaus G.}{2019, Astronomy \& Astrophysics, 622, A133/16.\\ \texttt{\href{https://doi.org/10.1051/0004-6361/201834400}{doi:10.1051/0004-6361/201834400}, \href{https://arxiv.org/abs/1812.06725}{ArXiv:1812.06725}}}
+\bibentry{Flares in open clusters with K2. I. M45 (Pleiades), M44 (Praesepe) and M67}{Ilin, Ekaterina; Schmidt, Sarah J.; Davenport, James R. A.; Strassmeier, Klaus G.}{2019, Astronomy \& Astrophysics, 622, A133/16.\\ \texttt{\href{https://doi.org/10.1051/0004-6361/201834400}{doi:10.1051/0004-6361/201834400
+}, \href{https://arxiv.org/abs/1812.06725}{ArXiv:1812.06725}}}
 
-\clearpage
-\smallheader{Ekaterina}{Ilin}
+%\clearpage
+%\smallheader{Ekaterina}{Ilin}
 
 \section{volunteering}
 \begin{entrylist}
@@ -248,9 +252,9 @@ Potsdam, Germany}
 %------------------------------------------------
 \entry
 {2013 \to ongoing}
-{Scientific youth}
+{Junior scientists network}
 {Deutsches Jungforschernetzwerk - juFORUM e.V.}
-{Organising interdisciplinary workshops and symposia for youth in STEM, presenting at science fairs, publishing articles in the club magazine; member of the executive board.}
+{Organising interdisciplinary workshops and symposia for students and young researchers in STEM, presenting at science fairs, publishing articles in the club magazine; member of the executive board.}
 %------------------------------------------------
 \end{entrylist}
 \end{document}
