Added SALT time and teaching in summer term 2020

--- a/CV_Ekaterina_Ilin.tex
+++ b/CV_Ekaterina_Ilin.tex
@@ -41,7 +41,7 @@ Carl-D\"ahne-Str. 10
 Germany
 ~
 +49 (176) 531 351 97
-+49 (331) 749 928 0
+%+49 (331) 749 928 0
 ~
 \href{mailto:eilin@aip.de}{eilin@aip.de}
 \href{https://github.com/ekaterinailin}{github/ekaterinailin}
@@ -62,7 +62,7 @@ Python, Unix, LaTeX, Git(Hub)
 
 \begin{entrylist}
 \entry
-{2018 \to \textbf{2022}}
+{2018 \to \textbf{01/2022}}
 {PhD {\normalfont in Astrophysics}}
 {Leibniz Institute for Astrophysics Potsdam (AIP), Germany}
 {Supervisor: Prof. Dr. Katja Poppenh\"ager\\
@@ -92,10 +92,39 @@ Supervisor: Prof. Dr. Ulrich Nienhaus\\
 %------------------------------------------------
 \end{entrylist}
 
+
+%-------------------------------------------------------------------------------
+%	PUBLICATIONS SECTION
+%-------------------------------------------------------------------------------
+
+\section{refereed publications}
+%\reversemarginpar
+%\marginnote{\color{gray}{refereed}}
+\bibentry{Flares in open clusters with K2. I. M45 (Pleiades), M44 (Praesepe) and M67}{Ilin, Ekaterina; Schmidt, Sarah J.; Davenport, James R. A.; Strassmeier, Klaus G.}{2019, Astronomy \& Astrophysics, 622, A133/16.\\ \texttt{\href{https://doi.org/10.1051/0004-6361/201834400}{doi:10.1051/0004-6361/201834400
+}, \href{https://arxiv.org/abs/1812.06725}{ArXiv:1812.06725}}}
+
+\section{telescope time}
+
+\begin{entrylist}
+\entry
+{2020 }
+{SALT HRS, 2.8 hours DDT}
+{}
+{PI: Katja Poppenh\"ager}
+
+
+\end{entrylist}
+
 \section{work and teaching}
 
 \begin{entrylist}
 
+%------------------------------------------------
+\entry
+{2020}
+{University of Potsdam}
+{Potsdam, Germany}
+{\emph{Teaching assistant} for undergraduates.}
 %------------------------------------------------
 \entry
 {2018}
@@ -118,8 +147,7 @@ Supervisor: Prof. Dr. Ulrich Nienhaus\\
 \end{entrylist}
 
 
-
-
+\newpage
 
 \section{presentations}
 
@@ -196,11 +224,11 @@ Potsdam, Germany}
 {NASA Ames Research Center, Mountain View, CA, USA}
 {Awarded funding for a research visit at the Kepler mission headquarters.}
 
-\entry
-{2018}
-{Hackathon Challenge Winner}
-{HackHPI, Hasso Plattner Institute, Potsdam, Germany}
-{Data science challenge by \emph{Tableau}.}
+%\entry
+%{2018}
+%{Hackathon Challenge Winner}
+%{HackHPI, Hasso Plattner Institute, Potsdam, Germany}
+%{Data science challenge by \emph{Tableau}.}
 
 \entry
 {2014}
@@ -221,15 +249,6 @@ Focus: Space Physics, Computational Physics}
 
 
 
-%-------------------------------------------------------------------------------
-%	PUBLICATIONS SECTION
-%-------------------------------------------------------------------------------
-
-\section{refereed publications}
-%\reversemarginpar
-%\marginnote{\color{gray}{refereed}}
-\bibentry{Flares in open clusters with K2. I. M45 (Pleiades), M44 (Praesepe) and M67}{Ilin, Ekaterina; Schmidt, Sarah J.; Davenport, James R. A.; Strassmeier, Klaus G.}{2019, Astronomy \& Astrophysics, 622, A133/16.\\ \texttt{\href{https://doi.org/10.1051/0004-6361/201834400}{doi:10.1051/0004-6361/201834400
-}, \href{https://arxiv.org/abs/1812.06725}{ArXiv:1812.06725}}}
 
 %\clearpage
 %\smallheader{Ekaterina}{Ilin}
