Fixed typos, improved language

--- a/CV_Ekaterina_Ilin.tex
+++ b/CV_Ekaterina_Ilin.tex
@@ -208,14 +208,14 @@ Potsdam, Germany}
 \entry
 {2020 \to ongoing}
 {Doctoral Scholarship}
-{German Academic Scholaship Foundation}
-{Includes a stipend, and additional academic and financial support throughout the doctoral studies.}
+{German Academic Scholarship Foundation}
+{Includes a stipend, travel grants, and academic support throughout the doctoral studies.}
 
 \entry
 {2019}
 {Graduation Award}
 {Physikalische Gesellschaft zu Berlin, Berlin, Germany}
-{Award tendered to excellent master theses earned at universities in Berlin and Potsdam.}
+{Award for excellent master theses in physics earned at universities in Berlin and Potsdam.}
 
 
 \entry
@@ -241,7 +241,7 @@ Focus: Space Physics, Computational Physics}
 {2012 \to 2018}
 {Full Scholarship}
 {German Academic Scholarship Foundation}
-{Includes a stipend, and additional academic and financial support throughout the undergraduate and graduate studies.}
+{Includes a stipend, travel grants, and academic support throughout the undergraduate and graduate studies.}
 
 %------------------------------------------------
 \end{entrylist}
