--- a/CV_Ekaterina_Ilin.tex
+++ b/CV_Ekaterina_Ilin.tex
@@ -62,7 +62,7 @@ Python, Unix, LaTeX, Git(Hub)
 
 \begin{entrylist}
 \entry
-{2018 \to \textbf{01/2022}}
+{2018 \to \textbf{05/2022}}
 {PhD {\normalfont in Astrophysics}}
 {Leibniz Institute for Astrophysics Potsdam (AIP), Germany}
 {Supervisor: Prof. Dr. Katja Poppenh\"ager\\
@@ -73,7 +73,8 @@ Python, Unix, LaTeX, Git(Hub)
 {2016 \to 2018}
 {Master {\normalfont of Science in Astrophysics}}
 {University of Potsdam, Germany}
-{Supervisor: Prof. Dr. Klaus Strassmeier\\
+{Supervisor: Prof. Dr. Klaus Strassmeier \\
+ Mentor: Dr. Sarah J. Schmidt\\
 \emph{Flares in Clusters using K2 Data} \\ 
 \emph{1,0 "with distinction"}\vspace{0.2cm}\\
 This thesis quantified the relation between flaring activity on cool stars and their masses and ages for ZAMS to 600 Myr and K to mid-M dwarfs.}
@@ -100,8 +101,10 @@ Supervisor: Prof. Dr. Ulrich Nienhaus\\
 \section{refereed publications}
 %\reversemarginpar
 %\marginnote{\color{gray}{refereed}}
-\bibentry{Flares in open clusters with K2. I. M45 (Pleiades), M44 (Praesepe) and M67}{Ilin, Ekaterina; Schmidt, Sarah J.; Davenport, James R. A.; Strassmeier, Klaus G.}{2019, Astronomy \& Astrophysics, 622, A133/16.\\ \texttt{\href{https://doi.org/10.1051/0004-6361/201834400}{doi:10.1051/0004-6361/201834400
-}, \href{https://arxiv.org/abs/1812.06725}{ArXiv:1812.06725}}}
+\bibentry{Flares in Open Clusters with K2. I. M45 (Pleiades), M44 (Praesepe) and M67}{Ilin, Ekaterina; Schmidt, Sarah J.; Davenport, James R. A.; Strassmeier, Klaus G.}{2019, Astronomy \& Astrophysics, 622, A133/16.\\ \texttt{\href{https://doi.org/10.1051/0004-6361/201834400}{doi:10.1051/0004-6361/201834400
+} \href{https://arxiv.org/abs/1812.06725}{arXiv:1812.06725}}}
+
+\bibentry{Flares in Open Clusters with K2. II. Pleiades, Hyades, Praesepe, Ruprecht 147, and M67}{Ilin, Ekaterina; Schmidt, Sarah J.; Poppenhäger, Katja; Davenport, James R. A.; Kristiansen, Martti H.; Omohundro, Mark}{2020, Astronomy \& Astrophysics, forthcoming.\\\texttt{ \href{https://arxiv.org/abs/2010.05576}{arXiv:2010.05576}}}
 
 \section{telescope time}
 
@@ -114,6 +117,7 @@ Supervisor: Prof. Dr. Ulrich Nienhaus\\
 
 
 \end{entrylist}
+\newpage
 
 \section{work and teaching}
 
@@ -138,20 +142,34 @@ Supervisor: Prof. Dr. Ulrich Nienhaus\\
 {Potsdam, Germany}
 {\emph{Teaching assistant} for undergraduates.}
 %------------------------------------------------
-\entry
-{2011 \to 2012}
-{SchulLV GmbH}
-{Karlsruhe, Germany}
-{\emph{Author} of teaching aid in mathematics.}
-%------------------------------------------------
+%\entry
+%{2011 \to 2012}
+%{SchulLV GmbH}
+%{Karlsruhe, Germany}
+%{\emph{Author} of teaching aid in mathematics.}
+%%------------------------------------------------
 \end{entrylist}
 
 
-\newpage
 
 \section{presentations}
 
 \begin{entrylist}
+%------------------------------------------------
+\entry
+{2020}
+{Conference talk}
+{Annual Meeting of the German Astronomical Society\vspace{-.1cm}\\\null\hfill
+virtual, Germany}
+{Flares, mass, age, AND rotation.\\Calibrating the flaring-age-mass relation in open clusters.}
+%------------------------------------------------
+\entry
+{2020}
+{Poster exhibition}
+{Royal Astronomical Society\vspace{-.1cm}\\\null\hfill
+Early Career Poster Exhibition\vspace{-.1cm}\\\null\hfill
+virtual, global}
+{Where do giant flares occur on small stars?}
 %------------------------------------------------
 \entry
 {2019}
@@ -253,27 +271,27 @@ Focus: Space Physics, Computational Physics}
 %\clearpage
 %\smallheader{Ekaterina}{Ilin}
 
-\section{volunteering}
-\begin{entrylist}
-\entry
-{2017 \to ongoing}
-{Python in astronomy}
-{University of Potsdam\vspace{-.1cm}\\\null\hfill Leibniz Institute for Astrophysics Potsdam - AIP}
-{Running a Python code review group with the master students in astrophysics on a biweekly basis in 2017/2018. Running the Python Club at AIP since 2019.\\}
-%------------------------------------------------
-\entry
-{2016 \to ongoing}
-{Effective Altruism}
-{Effective Altruism Berlin, Potsdam\vspace{-.1cm}
-\\\null\hfill Studienstiftung d. dt. Volkes
-\vspace{-.1cm}\\\null\hfill Netzwerk f\"ur Effektiven Altruismus Deutschland e.V.}
-{Organising interdisciplinary workshops for 20-120 participants, reading groups, and recreational activities; local group head in Potsdam. Currently member of the excutive board of the German Network for Effective Altruism (NEAD e.V.).\\}
-%------------------------------------------------
-\entry
-{2013 \to ongoing}
-{Junior scientists network}
-{Deutsches Jungforschernetzwerk - juFORUM e.V.}
-{Organising interdisciplinary workshops and symposia for students and young researchers in STEM, presenting at science fairs, publishing articles in the club magazine; member of the executive board.}
-%------------------------------------------------
-\end{entrylist}
+%\section{volunteering}
+%\begin{entrylist}
+%\entry
+%{2017 \to ongoing}
+%{Python in astronomy}
+%{University of Potsdam\vspace{-.1cm}\\\null\hfill Leibniz Institute for Astrophysics Potsdam - AIP}
+%{Running a Python code review group with the master students in astrophysics on a biweekly basis in 2017/2018. Running the Python Club at AIP since 2019.\\}
+%%------------------------------------------------
+%\entry
+%{2016 \to ongoing}
+%{Effective Altruism}
+%{Effective Altruism Berlin, Potsdam\vspace{-.1cm}
+%\\\null\hfill Studienstiftung d. dt. Volkes
+%\vspace{-.1cm}\\\null\hfill Netzwerk f\"ur Effektiven Altruismus Deutschland e.V.}
+%{Organising interdisciplinary workshops for 20-120 participants, reading groups, and recreational activities; local group head in Potsdam. Currently member of the excutive board of the German Network for Effective Altruism (NEAD e.V.).\\}
+%%------------------------------------------------
+%\entry
+%{2013 \to ongoing}
+%{Junior scientists network}
+%{Deutsches Jungforschernetzwerk - juFORUM e.V.}
+%{Organising interdisciplinary workshops and symposia for students and young researchers in STEM, presenting at science fairs, publishing articles in the club magazine; member of the executive board.}
+%%------------------------------------------------
+%\end{entrylist}
 \end{document}
